continue on updating all the commands to work
the first POST command started to work (group)
